# nickel

./: flake.nix
.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parsing.rs
mayhem/: Dockerfile  parsing.mayhemfile
rfcs/: 004-typechecking.md
src/: cache.rs  deserialize.rs  identifier.rs  pretty.rs  program.rs  serialize.rs  term.rs  types.rs
src/eval/: callstack.rs  merge.rs  mod.rs  operation.rs
src/parser/: grammar.lalrpop  lexer.rs
src/repl/: mod.rs
src/transform/: free_vars.rs
src/typecheck/: eq.rs  mod.rs  operation.rs
stdlib/: contract.ncl
