[package]
name = "nickel-lang-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nickel-lang]
path = ".."
default-features = false
features = ["doc"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parsing"
path = "fuzz_targets/parsing.rs"
test = false
doc = false
